K8S/GKE/book-info-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-info-depl
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: book-info-service
  template:
    metadata:
      labels:
        app: book-info-service
    spec:
      containers:
        - name: book-info-service
          image: europe-west4-docker.pkg.dev/astral-option-427116-t2/audio-oasis/book-info-service
          resources:
            requests: #Claimed resources
              memory: "256Mi"
              cpu: "250m" #1/4 of the core
            limits:   #Maximum resources
              memory: "512Mi"
              cpu: "500m" #1/2 of the core
---
apiVersion: v1
kind: Service
metadata:
  name: book-info-service-nodeport
spec:
  type: NodePort
  selector:
    app: book-info-service
  ports:
    - port: 80
      targetPort: 80
#Auto-Scaling
