K8S/GKE/logging-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logging-depl
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: logging-service
  template:
    metadata:
      labels:
        app: logging-service
    spec:
      containers:
        - name: logging-service
          image: europe-west4-docker.pkg.dev/astral-option-427116-t2/audio-oasis/logging-service
          resources:
            requests: #Claimed resources
              memory: "128Mi"
              cpu: "100m" #10% of the core
            limits:   #Maximum resources
              memory: "256Mi"
              cpu: "250m" #25% of the core
---
apiVersion: v1
kind: Service
metadata:
  name: logging-service-nodeport
spec:
  type: NodePort
  selector:
    app: logging-service
  ports:
    - port: 80
      targetPort: 80
#Auto-Scaling
