K8S/GKE/streaming-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streaming-depl
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: streaming-service
  template:
    metadata:
      labels:
        app: streaming-service
    spec:
      containers:
        - name: book-streaming-service
          image: europe-west4-docker.pkg.dev/astral-option-427116-t2/audio-oasis/book-streaming-service
          resources:
            requests: #Claimed resources
              memory: "256Mi"
              cpu: "250m" #1/4 of the core
            limits:   #Maximum resources
              memory: "1024Mi"
              cpu: "1000m" #1 core
---
apiVersion: v1
kind: Service
metadata:
  name: streaming-service-nodeport
spec:
  type: NodePort
  selector:
    app: streaming-service
  ports:
    - port: 80
      targetPort: 80
#Auto-Scaling
